# prowler

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  design.md
.claude/: settings.json
docs/: config-sample.toml  decisions.md  ux-roadmap.md  workflow-analysis.md
src/: auth.rs  clipboard.rs  config.rs  diff.rs  git.rs  github.rs  main.rs  session.rs
src/tui/: dashboard.rs  diff_view.rs  editor.rs  file_tree.rs  mod.rs  review.rs  syntax.rs
