[package]
name = "prowler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow   = "1"
clap     = { version = "4", features = ["derive"] }
git2     = "0.19"
octocrab = "0.44"
serde    = { version = "1", features = ["derive"] }
toml     = "0.8"
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }

