[package]
name = "prowler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.29"
git2       = "0.19"
octocrab   = "0.44"
ratatui    = "0.30"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
similar    = "2"
syntect    = { version = "5", default-features = false, features = ["default-fancy"] }
toml       = "0.8"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"

