[package]
name = "prowler"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal UI for deep GitHub PR review — edit-and-suggest from your shell."
license = "MIT"
readme = "README.md"
repository = "https://github.com/bardt/prowler"
keywords = ["github", "pr", "review", "tui", "git"]
categories = ["command-line-utilities", "development-tools"]
# Internal-only docs that crates.io users don't need (project notes, design
# log, internal roadmap). README.md, LICENSE, and docs/config-sample.toml
# still ship.
exclude = [
    "CLAUDE.md",
    "design.md",
    "docs/decisions.md",
    "docs/ux-roadmap.md",
    ".claude/",
]

[dependencies]
anyhow     = "1"
chrono     = { version = "0.4", default-features = false, features = ["clock"] }
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.29"
git2       = "0.19"
octocrab   = "0.44"
ratatui    = "0.30"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
similar    = "2"
syntect    = { version = "5", default-features = false, features = ["default-fancy"] }
toml       = "0.8"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }

